--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
            </div>
 <p>AI-powered image optimization with quality control</p>
 <div class="tool-actions">
-    <a href="/img-compress.html" class="action-btn">Try Now</a>
+    <a href="/tool/img-compress.html" class="action-btn">Try Now</a>
     <a href="https://your-link-to-learn-more.com" class="action-btn ghost">Learn More</a>
 </div>
 
