--- a/index.html
+++ b/index.html
@@ -173,10 +173,14 @@
 
         <!-- Image Tools -->
         <div class="tool-card">
-            <i class="tool-icon fas fa-image"></i>
-            <h3>Image Tools</h3>
-            <p>Compress, convert, resize, and edit images</p>
-            <div class="tool-actions" style="margin-top: 1rem;">
+        <i class="tool-icon fas fa-image"></i>
+         <h3>Image Tools</h3>
+          <p>Compress, convert, resize, and edit images</p>
+    <div class="tool-actions" style="margin-top: 1rem;">
+        <a href="/image-compress" class="tool-link">Compress Image</a>
+        <a href="/image-convert" class="tool-link">Convert Format</a>
+    </div>
+</div>
                 <button class="tool-button">Optimize Image</button>
                 <button class="tool-button">Convert Format</button>
             </div>
