--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
          <h3>Image Tools</h3>
           <p>Compress, convert, resize, and edit images</p>
     <div class="tool-actions" style="margin-top: 1rem;">
-        <a href="/img-compress.html" class="tool-link">Compress Image</a>
+        <a href="/Tools/img-compress.html" class="tool-link">Compress Image</a>
         <a href="/img-compress.html" class="tool-link">Convert Format</a>
     </div>
 </div>
