--- a/img-compress.html
+++ b/img-compress.html
@@ -222,7 +222,10 @@
                 <div class="image-card">
                     <h3>Compressed Image</h3>
                     <canvas id="compressedCanvas"></canvas>
-                    <button id="downloadBtn">Download Compressed Image</button>
+                     <!-- Change from <button> to <a> element -->
+                 <a id="downloadBtn" class="download-button" style="display: none;">
+                  Download Compressed Image
+          </a>
                 </div>
             </div>
 
